--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 # PyCharm folder
 .idea
 
+resources/*
+pyamr/gallery/*
+pyamr/examples/*
+pyamr/core/regression/.pyramid-cache/*
+
 # Sphinx documentation
 docs/build
 docs/source/_*
