--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pkgname
+name = pyamr
 version = 0.0.1
 description = A python package library template.
 long_description = file: README.rst
