--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ resources/*
 pyamr/gallery/*
 pyamr/examples/*
 pyamr/core/regression/.pyramid-cache/*
+pyamr/datasets/microbiology/sample/raw/*
 examples/_data/*
 
 # Sphinx documentation
