--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ pyamr/gallery/*
 pyamr/examples/*
 pyamr/core/regression/.pyramid-cache/*
 pyamr/datasets/microbiology/sample/raw/*
+pyamr/datasets/microbiology/nhs/*
+pyamr/datasets/microbiology/20*
 examples/_data/*
 
 # Sphinx documentation
