--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ resources/*
 pyamr/gallery/*
 pyamr/examples/*
 pyamr/core/regression/.pyramid-cache/*
+pyamr/datasets/microbiology/sample/raw/*
+pyamr/datasets/microbiology/nhs/*
+pyamr/datasets/microbiology/20*
 examples/_data/*
 
 # Sphinx documentation
