--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ pyamr/examples/*
 pyamr/core/regression/.pyramid-cache/*
 pyamr/datasets/microbiology/sample/raw/*
 pyamr/datasets/microbiology/nhs/*
+pyamr/datasets/microbiology/mimic/*
 pyamr/datasets/microbiology/20*
 examples/_data/*
 
