~ preparing workflow test and codecov

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyamr
-version = x.x.x
+version = 0.0.2
 description = A python package library template.
 long_description = file: README.rst
 url = https://www.example.com/
