--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ test ]
+    branches: [ develop ]
   pull_request:
-    branches: [ test ]
+    branches: [ develop ]
 
 jobs:
   build:
