--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -71,5 +71,5 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3.1.0
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage.xml
-        #token:
