--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -60,6 +60,7 @@ jobs:
       run: |
         python -m pip install pytest
         python -m pip install pytest-cov
+        python -m pip install mock
         pytest
 
     # Generate report
