--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,11 @@
 filterwarnings =
   ignore::UserWarning
 addopts = --cov=pyamr
-          --cov-report term-missing:skip-covered
+          --cov-report html
+          --ignore=datasets
+          --ignore=utils
+          --ignore=pyamr/utils/display.py
+          --verbosity 4
 #         --cov-fail-under 100
+# #term-missing:skip-covered
+#--cov-config=path/to/.coveragerc # not needed
