--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,25 @@
 [run]
-omit = pyamr/datasets/*,pyamr/graphics/*,pyamr/utils/*
+omit = pyamr/datasets/*,pyamr/graphics/*,pyamr/utils/*,pyamr/core/regression/pyarima2.py,pyamr/core/regression/pyarima.py,pyamr/core/regression/wregression.py
+
+[report]
+
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+
+    # Don't complain about abstract methods, they aren't run:
+    @(abc\.)?abstractmethod
+
+ignore_errors = True
