--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -61,12 +61,16 @@ jobs:
         python -m pip install pytest
         python -m pip install pytest-cov
         python -m pip install mock
-        pytest
+        pytest --cov-report xml
 
+
+    # .. note: Since there pytest.ini already includes the
+    #          flags below it should have created the coverage
+    #          report on the previous step.
     # Generate report
-    - name: Generate coverage report (pytest)
-      run:
-        pytest . --cov=./ --cov-report=xml
+    #- name: Generate coverage report (pytest)
+    #  run:
+    #    pytest . --cov=pyamr --cov-report=xml
 
     # Create an upload coverage report
     - name: Upload coverage to Codecov
