~ specify --cov-config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 filterwarnings =
   ignore::UserWarning
-addopts = --cov=pyamr
+addopts = --cov-config=.coveragerc
+          --cov=pyamr
           --cov-report html
           --ignore=datasets
           --ignore=utils
