--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pytest
-Sphinx
+Sphinx==5.3.0
 sphinx-rtd-theme
-sphinx-gallery
+sphinx-gallery==0.10.0
+sphinxcontrib-bibtex
 matplotlib
 statsmodels
 pyramid
@@ -12,3 +13,4 @@ statsmodels
 pytest
 pytest-cov
 mock
+#plotly
