--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 # PyCharm folder
 .idea
 
+docs/source/_apidoc/*
+
+pyamr/datasets/microbiology/sample/inputs
+pyamr/datasets/microbiology/sample/outputs
+pyamr/datasets/mimic/*
+pyamr/fixtures/mimic/*
+
 resources/*
 pyamr/gallery/*
 pyamr/examples/*
@@ -27,6 +34,7 @@ pyamr/datasets/microbiology/nhs/*
 pyamr/datasets/microbiology/mimic/mimic-*
 pyamr/datasets/microbiology/20*
 examples/_data/*
+
 
 # Sphinx documentation
 docs/build
