--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,8 @@ jobs:
           #name: pyamr-${{ github.ref }}
           tag_name: ${{ github.ref }}
           release_name: pyamr-${{ github.ref }}
+          name: pyamrname-${{ github.ref }}
+          title: pyamr-title-${{ github.ref }}
           # Getting information from package configuration
           #tag_name: ${{ env.VERSION }}
           #release_name: Release v${{ env.VERSION }}
