--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -63,11 +63,10 @@ jobs:
         python -m pip install mock
         pytest --cov-report xml
 
-
     # .. note: Since there pytest.ini already includes the
     #          flags below it should have created the coverage
     #          report on the previous step.
-    # Generate report
+    # Generate coverage report
     #- name: Generate coverage report (pytest)
     #  run:
     #    pytest . --cov=pyamr --cov-report=xml
