--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = pyamr
-version = 0.0.2
+#version = 0.0.2
 description = A python package library template.
-long_description = file: README.rst
-url = https://www.example.com/
+long_description = file: README.md
+url = https://bahp.github.io/pyAMR/
 author = Bernard Hernandez
 author_email = b.hernandez-perez@imperial.ac.uk
 license = BSD-3-Clause  # Example license
