--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,10 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+install_requires= [
+    'numpy',
+    'pandas'
+]
 
 [options]
 include_package_data = true
