--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,16 @@
 [metadata]
 name = pyamr
-#version = 0.0.2
-description = A python package library template.
-long_description = file: README.md
-url = https://bahp.github.io/pyAMR/
+#version = attr: pyamr.__version__
+version = 0.0.5
 author = Bernard Hernandez
 author_email = b.hernandez-perez@imperial.ac.uk
-license = BSD-3-Clause  # Example license
+description = A python package library template.
+long_description = file: README.rst
+#keywords = antimicrobial resistance
+url = https://bahp.github.io/pyAMR/
+license = MIT  # Example license
+readme = README.md
+#requires-python = ">=3.6"
 classifiers =
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
@@ -17,11 +21,21 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-install_requires= [
-    'numpy',
-    'pandas'
-]
+
+[project.urls]
+Documentation = https://bahp.github.io/pyAMR/
+Bug Tracker = https://github.com/bahp/pyAMR/issues
+Source code = https://github.com/bahp/pyamr/
 
 [options]
 include_package_data = true
 packages = find:
+#package_data
+#python_requires = >=3.7
+install_requires =
+    numpy
+    pandas
+
+[options.packages.find]
+exclude =
+    examples*
