~ skip create release step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,26 +44,27 @@ jobs:
           echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
           echo "VERSION=$(python setup.py --version)" >> $GITHUB_ENV
 
+
       # When pushing a tag from the command this would create the
       # github release associated to the tag. However, when using
       # the interface it creates a full complete release.
-      - name: Create GitHub release
-        id: create-new-release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # Getting information from github interface
-          #name: pyamr-${{ github.ref }}
-          tag_name: ${{ github.ref }}
-          release_name: pyamr-${{ github.ref }}
-          # Getting information from package configuration
-          #tag_name: ${{ env.VERSION }}
-          #release_name: Release v${{ env.VERSION }}
-          #body
-          #draft: false
-          #prerelease: false
-          # ${{ github.run_number }}
+      #- name: Create GitHub release
+      #  id: create-new-release
+      #  uses: actions/create-release@v1
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #  with:
+      #    # Getting information from github interface
+      #    #name: pyamr-${{ github.ref }}
+      #    tag_name: ${{ github.ref }}
+      #    release_name: pyamr-${{ github.ref }}
+      #    # Getting information from package configuration
+      #    #tag_name: ${{ env.VERSION }}
+      #    #release_name: Release v${{ env.VERSION }}
+      #    #body
+      #    #draft: false
+      #    #prerelease: false
+      #    # ${{ github.run_number }}
 
       - name: Upload GitHub release asset
         uses: actions/upload-release-asset@v1
