--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,31 @@ name: GitHub Release
 #    branches: [ main ]  # Exclude develop!
 
 on:
-  push:
-    tags:
-      - "*" # 'v*' would match tags like v0.1, v1.0, ...
+
+  # .. note: There can be many tags, which can be created directly
+  #          from the terminal. However, not all tags are completed
+  #          with a release. Note that when creating a release, for
+  #          example using the github interface, it has a tag
+  #          associated.
+  #          from the
+
+  #workflow_run:
+  #  workflow: ['Python package']
+  #  types: [completed]
+  #  branches: [ 'release/**' ]
+
+  # .. note:: This would much any tag creation such as v0.1.
+
+  #push:
+  #  tags:
+  #    - "*"
 
 jobs:
+  package:
+    uses: ./.github/workflows/package.yml
+
   release:
+    needs: [package]
     runs-on: ubuntu-latest
 
     steps:
@@ -23,22 +42,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Python
         uses: actions/setup-python@v4
-        with:
-          python-version: '3.9.17'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
 
       - name: Build distribution
-        run: python setup.py sdist #bdist_wheel
+        run: |
+          python -m pip install build
+          #python setup.py sdist bdist_wheel # old (setup.cfg)
+          python -m build --sdist --wheel    # new (pyproject.toml)
 
-      #- name: Upload distribution artifact
-      #  uses: actions/upload-artifact@v2
-      #  with:
-      #    name: static-site
-      #    path: ./dist/
-
+      # Get version info from setup.py file (not ideal).
       - name: Set package variables
         run: |
           echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
@@ -81,7 +95,5 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python -m pip install build
-          #python setup.py sdist bdist_wheel # old (setup.cfg)
-          python -m build --sdist --wheel    # new (pyproject.toml)
+          pip install setuptools wheel twine
           twine upload -r testpypi dist/*
