enable publish pytest

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,10 +95,10 @@ jobs:
       #    asset_name: ${{ env.FULLNAME }}
       #    asset_content_type: application/gzip
 
-      #- name: Publish package on TestPyPI
-      #  env:
-      #    TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-      #    TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      #  run: |
-      #    pip install setuptools wheel twine
-      #    twine upload -r testpypi dist/*
+      - name: Publish package on TestPyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          pip install setuptools wheel twine
+          twine upload -r testpypi dist/*
