--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,8 +17,8 @@ on:
     branches: [ '**' ] # All branches
   pull_request:
     branches: [ '**' ] # All branches.
-  release:
-    types: [ created ]
+  #release:
+  #  types: [ created ]
 
 jobs:
   build:
