--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,15 +85,16 @@ jobs:
       #    #prerelease: false
       #    # ${{ github.run_number }}
 
-      - name: Upload GitHub release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./dist/${{ env.FULLNAME }}.tar.gz
-          asset_name: ${{ env.FULLNAME }}
-          asset_content_type: application/gzip
+
+      #- name: Upload GitHub release asset
+      #  uses: actions/upload-release-asset@v1
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #  with:
+      #    upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+      #    asset_path: ./dist/${{ env.FULLNAME }}.tar.gz
+      #    asset_name: ${{ env.FULLNAME }}
+      #    asset_content_type: application/gzip
 
       - name: Publish package on TestPyPI
         env:
