--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyamr"
-version = "0.0.8"
+version = "{{VERSION_PLACEHOLDER}}"
 keywords = ["AMR"]
 license = {text = "GPL-3.0-only"}         # option with fle ({file = "LICENSE.md"})
 
