--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,13 +53,11 @@ jobs:
           echo "TAG=${{ github.ref }}" >> $GITHUB_ENV
           echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
           echo "VERSION=$(python setup.py --version)" >> $GITHUB_ENV
-          echo TAG
 
       # Update version in pyproject.toml
       - name: Update version in pyproject.toml
         run: |
-          sed -i 's/{{VERSION_PLACEHOLDER}}/4.5.6/' pyproject.toml
-          #sed -i '' 's/{{VERSION_PLACEHOLDER}}/4.5.6/' pyproject.toml
+          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ env.TAG }}/g' pyproject.toml
 
       - name: Build distribution
         run: |
@@ -87,7 +85,6 @@ jobs:
       #    #draft: false
       #    #prerelease: false
       #    # ${{ github.run_number }}
-
 
       #- name: Upload GitHub release asset
       #  uses: actions/upload-release-asset@v1
