--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,18 +46,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      # Extract global variables
+      # Extract global variables ($GITHUB_OUTPUT)
       - name: Extract variables
         id: vars
         run: |
-          echo "TAG=${{ github.ref }}" >> $GITHUB_ENV
+          echo "TAG=${{ github.ref#refs/*/ }}" >> $GITHUB_ENV
           echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
           echo "VERSION=$(python setup.py --version)" >> $GITHUB_ENV
+          echo ${{ env.TAG }}
 
       # Update version in pyproject.toml
       - name: Update version in pyproject.toml
         run: |
-          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ env.TAG }}/g' pyproject.toml
+          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ env.TAG }}/' pyproject.toml
 
       - name: Build distribution
         run: |
