--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,21 +50,24 @@ jobs:
       - name: Extract variables
         id: vars
         run: |
-          echo "TAG=${{ github.ref#refs/*/ }}" >> $GITHUB_ENV
-          echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
-          echo "VERSION=$(python setup.py --version)" >> $GITHUB_ENV
-          echo ${{ env.TAG }}
+          echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
 
       # Update version in pyproject.toml
       - name: Update version in pyproject.toml
         run: |
-          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ env.TAG }}/' pyproject.toml
+          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ septs.vars.outputs.tag }}/' pyproject.toml
 
       - name: Build distribution
         run: |
           python -m pip install build
           #python setup.py sdist bdist_wheel # old (setup.cfg)
           python -m build --sdist --wheel    # new (pyproject.toml)
+
+      #- name: Extract variables 2
+      #  run: |
+      #    echo "FULLNAME=$(python setup.py --fullname)" >> $GITHUB_ENV
+      #    echo "VERSION=$(python setup.py --version)" >> $GITHUB_ENV
+
 
       # When pushing a tag from the command this would create the
       # github release associated to the tag. However, when using
