--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
       # Update version in pyproject.toml
       - name: Update version in pyproject.toml
         run: |
-          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ septs.vars.outputs.tag }}/' pyproject.toml
+          sed -i 's/{{VERSION_PLACEHOLDER}}/${{ steps.vars.outputs.tag }}/' pyproject.toml
 
       - name: Build distribution
         run: |
