--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Extract variables
         id: vars
         run: |
-          echo "tag=${{ github.event.release.tag_name }} >> $GITHUB_OUTPUT
+          echo "tag=${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
 
       # Update version in pyproject.toml
       - name: Update version in pyproject.toml
