--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,11 @@ on:
       - "*"
 
 jobs:
-  #package:
-  #  uses: ./.github/workflows/package.yml
+  package:
+    uses: ./.github/workflows/package.yml
 
   release:
-    #needs: [package]
+    needs: [package]
     runs-on: ubuntu-latest
 
     steps:
@@ -46,7 +46,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      # Extract global variables ($GITHUB_OUTPUT)
+      # Extract global variables
       - name: Extract variables
         id: vars
         run: |
